--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- style css -->
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h2>Hi! I am</h2>
