--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>K 🇺🇦 T</title>
     <!-- style css -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h2>Hi! I am</h2>
     <h1>Kateryna Tsygankova</h1>
-    <h3>Content wtiter and front end developer-to-be based in Sweden 🇸🇪</h3>
-    <button>About me</button>
-    <button>Contact me</button>
+    <h3>Content writer and front end developer-to-be based in Sweden 🇸🇪</h3>
+    <section>
+      <button class="aboutme">About me</button>
+      <button class="contactme">Contact me</button>
+    </section>
   </body>
 </html>
