site.js file created and connected to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>K 🇺🇦 T</title>
+    <title>K🇺🇦T Home</title>
     <!-- style css -->
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -16,5 +16,6 @@
       <button class="aboutme">About me</button>
       <button class="contactme">Contact me</button>
     </section>
+    <script src="site.js"></script>
   </body>
 </html>
