contact me section added to about.html. Crosslinks to html pages added

--- a/about.html
+++ b/about.html
@@ -22,5 +22,27 @@
       nemo non quis inventore delectus. Ratione voluptate tempora praesentium
       provident eum veniam! Eos, blanditiis?
     </p>
+
+    <section id="contactme">
+      <h3>Contact me</h3>
+      <p>
+        Mail:<a href="mailto:kateryna.tsygankova@gmail.com"
+          >kateryna.tsygankova@gmail.com</a
+        >
+      </p>
+
+      <p>
+        Facebook:
+        <a href="https://www.facebook.com/kateryna.tsygankova"
+          >Kateryna Tsygankova</a
+        >
+      </p>
+      <p>
+        LinkedIn:
+        <a href="https://www.linkedin.com/in/kateryna-tsygankova-15a429244"
+          >Kateryna Tsygankova</a
+        >
+      </p>
+    </section>
   </body>
 </html>
