--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <h3>Content writer and front end developer-to-be based in Sweden 🇸🇪</h3>
     <section>
       <button class="aboutme">About me</button>
+
+      <a href="about.html">About me</a>
+
       <button class="contactme">Contact me</button>
+
+      <a href="about.html#contactme">Contact me</a>
     </section>
     <script src="site.js"></script>
   </body>
