button section in index.html reorganized. site.js deleted

--- a/index.html
+++ b/index.html
@@ -12,15 +12,11 @@
     <h2>Hi! I am</h2>
     <h1>Kateryna Tsygankova</h1>
     <h3>Content writer and front end developer-to-be based in Sweden 🇸🇪</h3>
-    <section>
-      <button class="aboutme">About me</button>
-
-      <a href="about.html">About me</a>
-
-      <button class="contactme">Contact me</button>
-
-      <a href="about.html#contactme">Contact me</a>
+    <section class="buttons">
+      <div class="about-button"><a href="about.html">About me</a></div>
+      <div class="contact-button">
+        <a href="about.html#contactme">Contact me</a>
+      </div>
     </section>
-    <script src="site.js"></script>
   </body>
 </html>
