added target attribute to links in contact section in about.html

--- a/about.html
+++ b/about.html
@@ -33,13 +33,15 @@
 
       <p>
         Facebook:
-        <a href="https://www.facebook.com/kateryna.tsygankova"
+        <a href="https://www.facebook.com/kateryna.tsygankova" target="_blank"
           >Kateryna Tsygankova</a
         >
       </p>
       <p>
         LinkedIn:
-        <a href="https://www.linkedin.com/in/kateryna-tsygankova-15a429244"
+        <a
+          href="https://www.linkedin.com/in/kateryna-tsygankova-15a429244"
+          target="_blank"
           >Kateryna Tsygankova</a
         >
       </p>
