css styles added to styles.css

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <body>
     <h2>Hi! I am</h2>
     <h1>Kateryna Tsygankova</h1>
-    <h3>Content writer and front end developer-to-be based in Sweden 🇸🇪</h3>
-    <section class="buttons">
-      <div class="about-button"><a href="about.html">About me</a></div>
-      <div class="contact-button">
+    <h3>Content writer and front end developer-to-be</h3>
+    <h4>from Ukraine 🇺🇦 and basing in Sweden 🇸🇪</h4>
+    <section class="buttons-container">
+      <div class="about-button button"><a href="about.html">About me</a></div>
+      <div class="contact-button button">
         <a href="about.html#contactme">Contact me</a>
       </div>
     </section>
