--- a/about.html
+++ b/about.html
@@ -8,43 +8,68 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <a href="index.html">Back to Homepage</a>
-    <h1>About Me</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt
-      voluptatibus nihil provident iure quasi aperiam neque autem sunt magnam
-      doloremque architecto commodi, sint odit nulla consectetur dolore ut
-      dolorum aliquid!
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae
-      fugit necessitatibus, eaque dignissimos expedita nostrum, voluptatibus
-      nemo non quis inventore delectus. Ratione voluptate tempora praesentium
-      provident eum veniam! Eos, blanditiis?
-    </p>
+    <a href="index.html" class="back-to-homepage">Back to Homepage</a>
+    <h1 class="about-me-heading">About Me</h1>
+    <div class="text-container">
+      <p class="text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium,
+        libero commodi nisi repellendus vero quas voluptatibus laboriosam et
+        vitae quisquam maiores, aliquam eum nobis in culpa a eligendi, voluptas
+        sint. Illum exercitationem veniam a vel placeat possimus aut vitae
+        provident blanditiis et sint est dolor, aperiam reiciendis quam id?
+        Placeat, perspiciatis at unde error dicta nulla accusamus architecto
+        ipsam expedita, sapiente earum iusto esse. Exercitationem cumque esse
+        deleniti soluta at iste rerum doloribus nihil ipsam, neque in assumenda
+        molestias eligendi distinctio corporis quibusdam accusamus similique
+        quos. Id magni, cumque assumenda quia saepe totam! Temporibus tenetur
+        ducimus consequuntur accusantium, cumque odio!
+      </p>
+      <p class="text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis,
+        dicta quasi quidem suscipit voluptatum inventore at vero. Consequatur
+        eius aspernatur nisi architecto sequi similique iure sed alias aliquam
+        quae quidem, impedit reprehenderit adipisci ea commodi officia magni ad,
+        voluptatum voluptatem aliquid dolorem repellendus quaerat odit. Id,
+        soluta. Veritatis, minima! Unde culpa libero voluptatibus nostrum fugit
+        rem. Vel, cupiditate debitis? Deleniti, nemo! Tempora quis consequuntur
+        tenetur! Culpa mollitia quibusdam provident rerum quam qui, voluptas
+        vel, molestias dicta illum praesentium nesciunt vero tempore ipsum
+        labore repellat assumenda accusantium. Omnis voluptas sint quaerat atque
+        minima alias, pariatur tenetur est sequi, aut ut nam.
+      </p>
+    </div>
 
     <section id="contactme">
-      <h3>Contact me</h3>
-      <p>
-        Mail:<a href="mailto:kateryna.tsygankova@gmail.com"
-          >kateryna.tsygankova@gmail.com</a
-        >
-      </p>
-
-      <p>
-        Facebook:
-        <a href="https://www.facebook.com/kateryna.tsygankova" target="_blank"
-          >Kateryna Tsygankova</a
-        >
-      </p>
-      <p>
-        LinkedIn:
-        <a
-          href="https://www.linkedin.com/in/kateryna-tsygankova-15a429244"
-          target="_blank"
-          >Kateryna Tsygankova</a
-        >
-      </p>
+      <h3 class="contact-me-heading">Contact me</h3>
+      <ul>
+        <li class="contact">
+          <p>
+            Mail:<a href="mailto:kateryna.tsygankova@gmail.com"
+              >kateryna.tsygankova@gmail.com</a
+            >
+          </p>
+        </li>
+        <li class="contact">
+          <p>
+            Facebook:
+            <a
+              href="https://www.facebook.com/kateryna.tsygankova"
+              target="_blank"
+              >Kateryna Tsygankova</a
+            >
+          </p>
+        </li>
+        <li class="contact">
+          <p>
+            LinkedIn:
+            <a
+              href="https://www.linkedin.com/in/kateryna-tsygankova-15a429244"
+              target="_blank"
+              >Kateryna Tsygankova</a
+            >
+          </p>
+        </li>
+      </ul>
     </section>
   </body>
 </html>
