text corrections in index.html made

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <h2>Hi! I am</h2>
     <h1>Kateryna Tsygankova</h1>
-    <h3>Content writer and front end developer-to-be</h3>
-    <h4>from Ukraine 🇺🇦 and basing in Sweden 🇸🇪</h4>
+    <h3>content writer and front end developer-to-be</h3>
+    <h4>from Ukraine 🇺🇦 basing in Sweden 🇸🇪</h4>
     <section class="buttons-container">
       <div class="about-button button"><a href="about.html">About me</a></div>
       <div class="contact-button button">
