--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h2>Hi! I am</h2>
-    <h1>Kateryna Tsygankova</h1>
+    <h1 class="name-heading">Kateryna Tsygankova</h1>
     <h3>content writer and front end developer-to-be</h3>
     <h4>from Ukraine 🇺🇦 basing in Sweden 🇸🇪</h4>
     <section class="buttons-container">
