site.js connected to both html files

--- a/about.html
+++ b/about.html
@@ -79,6 +79,7 @@
         </li>
       </ul>
     </section>
+    <!-- bootstrap js -->
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -94,5 +95,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <!-- js -->
+    <script href="site.js"></script>
   </body>
 </html>
