--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script href="site.js"></script>
   </body>
 </html>
