--- a/index.html
+++ b/index.html
@@ -16,16 +16,51 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h2>Hi! I am</h2>
-    <h1 class="name-heading">Kateryna Tsygankova</h1>
-    <h3>content writer and front end developer-to-be</h3>
-    <h4>from Ukraine 🇺🇦 basing in Sweden 🇸🇪</h4>
-    <section class="buttons-container">
-      <div class="about-button button"><a href="about.html">About me</a></div>
-      <div class="contact-button button">
-        <a href="about.html#contactme">Contact me</a>
-      </div>
-    </section>
+    <div class="container">
+      <!-- navigation -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <a
+            class="navbar-brand"
+            href="https://www.linkedin.com/in/kateryna-tsygankova-15a429244"
+            ><span class="logo">K🇺🇦T</span></a
+          >
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html#contactme">Contact me</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <h2>Hi! I am</h2>
+      <h1 class="name-heading">Kateryna Tsygankova</h1>
+      <h3>content writer and front end developer-to-be</h3>
+      <h4>from Ukraine 🇺🇦 basing in Sweden 🇸🇪</h4>
+      <section class="buttons-container">
+        <div class="about-button button"><a href="about.html">About me</a></div>
+        <div class="contact-button button">
+          <a href="about.html#contactme">Contact me</a>
+        </div>
+      </section>
+    </div>
     <!-- bootstrap js -->
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -42,6 +77,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <!-- js -->
     <script href="site.js"></script>
   </body>
 </html>
