navbar sticky positioned, back to homepage deleted from about.html

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <!-- navigation -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <button
           class="navbar-toggler"
           type="button"
@@ -50,7 +50,6 @@
         </div>
       </nav>
 
-      <a href="index.html" class="back-to-homepage">Back to Homepage</a>
       <h1 class="about-me-heading">About Me</h1>
       <div class="text-container">
         <p class="text">
@@ -60,13 +59,6 @@
           voluptas sint. Illum exercitationem veniam a vel placeat possimus aut
           vitae provident blanditiis et sint est dolor, aperiam reiciendis quam
           id?
-          <br />
-          Placeat, perspiciatis at unde error dicta nulla accusamus architecto
-          ipsam expedita, sapiente earum iusto esse. Exercitationem cumque esse
-          deleniti soluta at iste rerum doloribus nihil ipsam, neque in
-          assumenda molestias eligendi distinctio corporis quibusdam accusamus
-          similique quos. Id magni, cumque assumenda quia saepe totam!
-          Temporibus tenetur ducimus consequuntur accusantium, cumque odio!
         </p>
         <p class="text">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis,
@@ -74,13 +66,6 @@
           eius aspernatur nisi architecto sequi similique iure sed alias aliquam
           quae quidem, impedit reprehenderit adipisci ea commodi officia magni
           ad, voluptatum voluptatem aliquid dolorem repellendus quaerat odit.
-          <br />Id, soluta. Veritatis, minima! Unde culpa libero voluptatibus
-          nostrum fugit rem. Vel, cupiditate debitis? Deleniti, nemo! Tempora
-          quis consequuntur tenetur! Culpa mollitia quibusdam provident rerum
-          quam qui, voluptas vel, molestias dicta illum praesentium nesciunt
-          vero tempore ipsum labore repellat assumenda accusantium. Omnis
-          voluptas sint quaerat atque minima alias, pariatur tenetur est sequi,
-          aut ut nam.
         </p>
       </div>
 
