html tags revised, text corrected

--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
       <!-- navigation -->
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+         <div class="container">
         <button
           class="navbar-toggler"
           type="button"
@@ -49,8 +49,10 @@
           </ul>
         </div>
       </nav>
-
-      <h1 class="about-me-heading">About Me</h1>
+      <div class="aboutme-container">
+        <h1 class="about-me-heading">About Me</h1>
+        <h3>🇺🇦 front end developer based in Sweden 🇸🇪</h3>
+      </div>
       <div class="text-container">
         <p class="text">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium,
