--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
       <!-- navigation -->
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+          <div class="container">
         <button
           class="navbar-toggler"
           type="button"
@@ -52,8 +52,7 @@
 
       <h2>Hi! I am</h2>
       <h1 class="name-heading">Kateryna Tsygankova</h1>
-      <h3>content writer and front end developer-to-be</h3>
-      <h4>from Ukraine 🇺🇦 basing in Sweden 🇸🇪</h4>
+      <h3>🇺🇦 front end developer based in Sweden 🇸🇪</h3>
       <section class="buttons-container">
         <div class="about-button button"><a href="about.html">About me</a></div>
         <div class="contact-button button">
