images added to the project

--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
           <a href="about.html#contactme">Contact me</a>
         </div>
       </section>
+
+      <div class="portfolio-container-home">
+        <div class="row">
+          <div class="col-6">
+            <img src="" alt="">
+          </div>
+          <div class="col-6"></div>
+        </div>
+        <div class="row">
+           <div class="col-6"></div>
+          <div class="col-6"></div>
+        </div>
+        <div class="row">
+           <div class="col-6"></div>
+          <div class="col-6"></div>
+        </div>
+      </div>
     </div>
     <!-- bootstrap js -->
     <script
