portfolio images added to homepage

--- a/index.html
+++ b/index.html
@@ -63,16 +63,21 @@
       <div class="portfolio-container-home">
         <div class="row">
           <div class="col-6">
-            <img src="" alt="">
+            <img class = "portfolio-index-image" src="images/image3responsive.png" alt="yoga project">
           </div>
           <div class="col-6"></div>
         </div>
         <div class="row">
-           <div class="col-6"></div>
-          <div class="col-6"></div>
+           <div class="col-6">
+           </div>
+          <div class="col-6">
+             <img class = "portfolio-index-image" src="images/image1responsive.png" alt="weather project">
+          </div>
         </div>
         <div class="row">
-           <div class="col-6"></div>
+           <div class="col-6">
+             <img class = "portfolio-index-image" src="images/image2responsive.png" alt="yogurt project">
+           </div>
           <div class="col-6"></div>
         </div>
       </div>
