images added to about page, images moves to folder and renamed

--- a/about.html
+++ b/about.html
@@ -71,6 +71,20 @@
         </p>
       </div>
 
+      <section class="images-block">
+        <div class="row">
+          <div class="col-4">
+            <img class = "portfolio-about-image" src="images/yoga.png" alt="yoga project">
+          </div>
+          <div class="col-4">
+             <img class = "portfolio-about-image" src="images/weather.png" alt="weather project">
+          </div>
+          <div class="col-4">
+             <img class = "portfolio-about-image" src="images/yogurt.png" alt="yogurt project">
+          </div>
+        </div>
+      </section>
+
       <section id="contactme">
         <h3 class="contact-me-heading">Contact me</h3>
         <ul>
