--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="portfolio-container-home">
         <div class="row">
           <div class="col-6">
-            <img class = "portfolio-index-image" src="images/image3responsive.png" alt="yoga project">
+            <img class = "portfolio-index-image" src="images/yoga.png" alt="yoga project">
           </div>
           <div class="col-6"></div>
         </div>
@@ -71,12 +71,12 @@
            <div class="col-6">
            </div>
           <div class="col-6">
-             <img class = "portfolio-index-image" src="images/image1responsive.png" alt="weather project">
+             <img class = "portfolio-index-image" src="images/weather.png" alt="weather project">
           </div>
         </div>
         <div class="row">
            <div class="col-6">
-             <img class = "portfolio-index-image" src="images/image2responsive.png" alt="yogurt project">
+             <img class = "portfolio-index-image" src="images/yogurt.png" alt="yogurt project">
            </div>
           <div class="col-6"></div>
         </div>
