tags and content added to description blocks at index page

--- a/about.html
+++ b/about.html
@@ -73,13 +73,13 @@
 
       <section class="images-block">
         <div class="row">
-          <div class="col-4">
+          <div class="col-sm-4">
             <img class = "portfolio-about-image" src="images/yoga.png" alt="yoga project">
           </div>
-          <div class="col-4">
+          <div class="col-sm-4">
              <img class = "portfolio-about-image" src="images/weather.png" alt="weather project">
           </div>
-          <div class="col-4">
+          <div class="col-sm-4">
              <img class = "portfolio-about-image" src="images/yogurt.png" alt="yogurt project">
           </div>
         </div>
