--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="container">
       <!-- navigation -->
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-         <div class="container">
         <button
           class="navbar-toggler"
           type="button"
@@ -74,13 +74,25 @@
       <section class="images-block">
         <div class="row">
           <div class="col-sm-4">
-            <img class = "portfolio-about-image" src="images/yoga.png" alt="yoga project">
+            <img
+              class="portfolio-about-image"
+              src="images/yoga.png"
+              alt="yoga project"
+            />
           </div>
           <div class="col-sm-4">
-             <img class = "portfolio-about-image" src="images/weather.png" alt="weather project">
+            <img
+              class="portfolio-about-image"
+              src="images/weather.png"
+              alt="weather project"
+            />
           </div>
           <div class="col-sm-4">
-             <img class = "portfolio-about-image" src="images/yogurt.png" alt="yogurt project">
+            <img
+              class="portfolio-about-image"
+              src="images/yogurt.png"
+              alt="yogurt project"
+            />
           </div>
         </div>
       </section>
