--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="container">
       <!-- navigation -->
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-          <div class="container">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarTogglerDemo01"
-              aria-controls="navbarTogglerDemo01"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-             >
-              <span class="navbar-toggler-icon"></span>
-           </button>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <a
             class="navbar-brand"
@@ -63,32 +63,59 @@
       <div class="portfolio-container-home">
         <div class="row">
           <div class="col-sm-6">
-            <img class = "portfolio-index-image" src="images/yoga.png" alt="yoga project">
+            <img
+              class="portfolio-index-image"
+              src="images/yoga.png"
+              alt="yoga project"
+            />
           </div>
           <div class="col-sm-6">
             <h2>Yoga Project</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi consequatur consequuntur, corrupti quia eveniet qui, ullam in quas iusto eum vitae dolorum voluptates dolores doloremque, eaque suscipit repudiandae voluptate fugit.</p>
-            <button class = 'button'>See More</button>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
+              consequatur consequuntur, corrupti quia eveniet qui, ullam in quas
+              iusto eum vitae dolorum voluptates dolores doloremque, eaque
+              suscipit repudiandae voluptate fugit.
+            </p>
+            <button class="button">See More</button>
           </div>
         </div>
         <div class="row">
-           <div class="col-sm-6">
-             <h2>Weather Project</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi consequatur consequuntur, corrupti quia eveniet qui, ullam in quas iusto eum vitae dolorum voluptates dolores doloremque, eaque suscipit repudiandae voluptate fugit.</p>
-            <button class = 'button'>See More</button>
-           </div>
           <div class="col-sm-6">
-             <img class = "portfolio-index-image" src="images/weather.png" alt="weather project">
+            <h2>Weather Project</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
+              consequatur consequuntur, corrupti quia eveniet qui, ullam in quas
+              iusto eum vitae dolorum voluptates dolores doloremque, eaque
+              suscipit repudiandae voluptate fugit.
+            </p>
+            <button class="button">See More</button>
+          </div>
+          <div class="col-sm-6">
+            <img
+              class="portfolio-index-image"
+              src="images/weather.png"
+              alt="weather project"
+            />
           </div>
         </div>
         <div class="row">
-           <div class="col-sm-6">
-             <img class = "portfolio-index-image" src="images/yogurt.png" alt="yogurt project">
-           </div>
           <div class="col-sm-6">
-             <h2>Yogurt Project</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi consequatur consequuntur, corrupti quia eveniet qui, ullam in quas iusto eum vitae dolorum voluptates dolores doloremque, eaque suscipit repudiandae voluptate fugit.</p>
-            <button class = 'button'>See More</button>
+            <img
+              class="portfolio-index-image"
+              src="images/yogurt.png"
+              alt="yogurt project"
+            />
+          </div>
+          <div class="col-sm-6">
+            <h2>Yogurt Project</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
+              consequatur consequuntur, corrupti quia eveniet qui, ullam in quas
+              iusto eum vitae dolorum voluptates dolores doloremque, eaque
+              suscipit repudiandae voluptate fugit.
+            </p>
+            <button class="button">See More</button>
           </div>
         </div>
       </div>
