button text css added

--- a/index.html
+++ b/index.html
@@ -54,22 +54,24 @@
       <h1 class="name-heading">Kateryna Tsygankova</h1>
       <h3>🇺🇦 front end developer based in Sweden 🇸🇪</h3>
       <section class="buttons-container">
-        <div class="about-button button"><a href="about.html">About me</a></div>
-        <div class="contact-button button">
+        <div class="button button-text">
+          <a href="about.html">About me</a>
+        </div>
+        <div class="button button-text">
           <a href="about.html#contactme">Contact me</a>
         </div>
       </section>
 
       <div class="portfolio-container-home">
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-6 project-block">
             <img
               class="portfolio-index-image"
               src="images/yoga.png"
               alt="yoga project"
             />
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-6 project-block">
             <h2>Yoga Project</h2>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
@@ -77,11 +79,11 @@
               iusto eum vitae dolorum voluptates dolores doloremque, eaque
               suscipit repudiandae voluptate fugit.
             </p>
-            <button class="button">See More</button>
+            <button class="button button-text">See More</button>
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-6 project-block">
             <h2>Weather Project</h2>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
@@ -89,9 +91,9 @@
               iusto eum vitae dolorum voluptates dolores doloremque, eaque
               suscipit repudiandae voluptate fugit.
             </p>
-            <button class="button">See More</button>
+            <button class="button button-text">See More</button>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-6 project-block">
             <img
               class="portfolio-index-image"
               src="images/weather.png"
@@ -100,7 +102,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-6 project-block">
             <img
               class="portfolio-index-image"
               src="images/yogurt.png"
@@ -115,7 +117,7 @@
               iusto eum vitae dolorum voluptates dolores doloremque, eaque
               suscipit repudiandae voluptate fugit.
             </p>
-            <button class="button">See More</button>
+            <button class="button button-text">See More</button>
           </div>
         </div>
       </div>
