images styling added

--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
         <h1 class="about-me-heading">About Me</h1>
         <h3>🇺🇦 front end developer based in Sweden 🇸🇪</h3>
       </div>
-      <div class="text-container">
-        <p class="text">
+      <div class="text-container radiused">
+        <p class="text radiused shadow">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium,
           libero commodi nisi repellendus vero quas voluptatibus laboriosam et
           vitae quisquam maiores, aliquam eum nobis in culpa a eligendi,
@@ -62,7 +62,7 @@
           vitae provident blanditiis et sint est dolor, aperiam reiciendis quam
           id?
         </p>
-        <p class="text">
+        <p class="text radiused shadow">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis,
           dicta quasi quidem suscipit voluptatum inventore at vero. Consequatur
           eius aspernatur nisi architecto sequi similique iure sed alias aliquam
@@ -75,21 +75,21 @@
         <div class="row">
           <div class="col-sm-4">
             <img
-              class="portfolio-about-image"
+              class="portfolio-about-image radiused shadow paddings"
               src="images/yoga.png"
               alt="yoga project"
             />
           </div>
           <div class="col-sm-4">
             <img
-              class="portfolio-about-image"
+              class="portfolio-about-image radiused shadow paddings"
               src="images/weather.png"
               alt="weather project"
             />
           </div>
           <div class="col-sm-4">
             <img
-              class="portfolio-about-image"
+              class="portfolio-about-image radiused shadow paddings"
               src="images/yogurt.png"
               alt="yogurt project"
             />
