--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
 
       <div class="portfolio-container-home">
         <div class="row">
-          <div class="col-sm-6 project-block">
+          <div class="col-sm-5 project-block radiused">
             <img
-              class="portfolio-index-image"
+              class="portfolio-index-image radiused"
               src="images/yoga.png"
               alt="yoga project"
             />
           </div>
-          <div class="col-sm-6 project-block">
+          <div class="col-sm-5 project-block radiused">
             <h2>Yoga Project</h2>
-            <p>
+            <p class="portfolio-text">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
               consequatur consequuntur, corrupti quia eveniet qui, ullam in quas
               iusto eum vitae dolorum voluptates dolores doloremque, eaque
@@ -83,9 +83,9 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6 project-block">
+          <div class="col-sm-5 project-block radiused">
             <h2>Weather Project</h2>
-            <p>
+            <p class="portfolio-text">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
               consequatur consequuntur, corrupti quia eveniet qui, ullam in quas
               iusto eum vitae dolorum voluptates dolores doloremque, eaque
@@ -93,25 +93,25 @@
             </p>
             <button class="button button-text">See More</button>
           </div>
-          <div class="col-sm-6 project-block">
+          <div class="col-sm-5 project-block radiused">
             <img
-              class="portfolio-index-image"
+              class="portfolio-index-image radiused"
               src="images/weather.png"
               alt="weather project"
             />
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6 project-block">
+          <div class="col-sm-5 project-block radiused">
             <img
-              class="portfolio-index-image"
+              class="portfolio-index-image radiused"
               src="images/yogurt.png"
               alt="yogurt project"
             />
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-5 project-block radiused">
             <h2>Yogurt Project</h2>
-            <p>
+            <p class="portfolio-text">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
               consequatur consequuntur, corrupti quia eveniet qui, ullam in quas
               iusto eum vitae dolorum voluptates dolores doloremque, eaque
