--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
           <a
             class="navbar-brand"
             href="https://www.linkedin.com/in/kateryna-tsygankova-15a429244"
-            ><span class="logo">K🇺🇦T</span></a
+            target="_blank"
+            ><span class="logo bold">K🇺🇦T</span></a
           >
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
