final css styles added

--- a/about.html
+++ b/about.html
@@ -31,10 +31,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a
-            class="navbar-brand"
-            href="https://www.linkedin.com/in/kateryna-tsygankova-15a429244"
-            target="_blank"
+          <a class="navbar-brand" href="index.html"
             ><span class="logo bold">K🇺🇦T</span></a
           >
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -52,23 +49,13 @@
       </nav>
       <div class="aboutme-container">
         <h1 class="about-me-heading">About Me</h1>
-        <h3>🇺🇦 front end developer based in Sweden 🇸🇪</h3>
+        <h3 class="opacity">🇺🇦 front end developer based in Sweden 🇸🇪</h3>
       </div>
-      <div class="text-container radiused">
-        <p class="text radiused shadow">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium,
-          libero commodi nisi repellendus vero quas voluptatibus laboriosam et
-          vitae quisquam maiores, aliquam eum nobis in culpa a eligendi,
-          voluptas sint. Illum exercitationem veniam a vel placeat possimus aut
-          vitae provident blanditiis et sint est dolor, aperiam reiciendis quam
-          id?
-        </p>
-        <p class="text radiused shadow">
+      <div class="text-container">
+        <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis,
           dicta quasi quidem suscipit voluptatum inventore at vero. Consequatur
-          eius aspernatur nisi architecto sequi similique iure sed alias aliquam
-          quae quidem, impedit reprehenderit adipisci ea commodi officia magni
-          ad, voluptatum voluptatem aliquid dolorem repellendus quaerat odit.
+          eius aspernatur nisi architecto sequi similique iure sed alias.
         </p>
       </div>
 
@@ -103,15 +90,19 @@
         <ul>
           <li class="contact">
             <p>
-              Mail:<a href="mailto:kateryna.tsygankova@gmail.com"
+              <b class="accent-colored">Mail: </b
+              ><a
+                class="contact-link"
+                href="mailto:kateryna.tsygankova@gmail.com"
                 >kateryna.tsygankova@gmail.com</a
               >
             </p>
           </li>
           <li class="contact">
             <p>
-              Facebook:
+              <b class="accent-colored">Facebook: </b>
               <a
+                class="contact-link"
                 href="https://www.facebook.com/kateryna.tsygankova"
                 target="_blank"
                 >Kateryna Tsygankova</a
@@ -120,8 +111,9 @@
           </li>
           <li class="contact">
             <p>
-              LinkedIn:
+              <b class="accent-colored">LinkedIn: </b>
               <a
+                class="contact-link"
                 href="https://www.linkedin.com/in/kateryna-tsygankova-15a429244"
                 target="_blank"
                 >Kateryna Tsygankova</a
