--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a
-            class="navbar-brand"
-            href="https://www.linkedin.com/in/kateryna-tsygankova-15a429244"
-            target="_blank"
+          <a class="navbar-brand" href="index.html"
             ><span class="logo bold">K🇺🇦T</span></a
           >
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -51,9 +48,9 @@
         </div>
       </nav>
 
-      <h2>Hi! I am</h2>
+      <h2>👋 Hi! I am</h2>
       <h1 class="name-heading">Kateryna Tsygankova</h1>
-      <h3>🇺🇦 front end developer based in Sweden 🇸🇪</h3>
+      <h3 class="opacity">🇺🇦 front end developer based in Sweden 🇸🇪</h3>
       <section class="buttons-container">
         <div class="button button-text">
           <a href="about.html">About me</a>
@@ -74,7 +71,7 @@
           </div>
           <div class="col-sm-5 project-block radiused">
             <h2>Yoga Project</h2>
-            <p class="portfolio-text">
+            <p class="portfolio-text paddings">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
               consequatur consequuntur, corrupti quia eveniet qui, ullam in quas
               iusto eum vitae dolorum voluptates dolores doloremque, eaque
@@ -86,7 +83,7 @@
         <div class="row">
           <div class="col-sm-5 project-block radiused">
             <h2>Weather Project</h2>
-            <p class="portfolio-text">
+            <p class="portfolio-text paddings">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
               consequatur consequuntur, corrupti quia eveniet qui, ullam in quas
               iusto eum vitae dolorum voluptates dolores doloremque, eaque
@@ -112,7 +109,7 @@
           </div>
           <div class="col-sm-5 project-block radiused">
             <h2>Yogurt Project</h2>
-            <p class="portfolio-text">
+            <p class="portfolio-text paddings">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
               consequatur consequuntur, corrupti quia eveniet qui, ullam in quas
               iusto eum vitae dolorum voluptates dolores doloremque, eaque
