slashes to links added

--- a/about.html
+++ b/about.html
@@ -31,18 +31,18 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="index.html"
+          <a class="navbar-brand" href="/index.html"
             ><span class="logo bold">K🇺🇦T</span></a
           >
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About</a>
+              <a class="nav-link active" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contactme">Contact me</a>
+              <a class="nav-link" href="/about.html#contactme">Contact me</a>
             </li>
           </ul>
         </div>
@@ -64,21 +64,21 @@
           <div class="col-sm-4">
             <img
               class="portfolio-about-image radiused shadow paddings"
-              src="images/yoga.png"
+              src="/images/yoga.png"
               alt="yoga project"
             />
           </div>
           <div class="col-sm-4">
             <img
               class="portfolio-about-image radiused shadow paddings"
-              src="images/weather.png"
+              src="/images/weather.png"
               alt="weather project"
             />
           </div>
           <div class="col-sm-4">
             <img
               class="portfolio-about-image radiused shadow paddings"
-              src="images/yogurt.png"
+              src="/images/yogurt.png"
               alt="yogurt project"
             />
           </div>
