--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="index.html"
+          <a class="navbar-brand" href="/"
             ><span class="logo bold">K🇺🇦T</span></a
           >
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link active" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contactme">Contact me</a>
+              <a class="nav-link" href="/about.html#contactme">Contact me</a>
             </li>
           </ul>
         </div>
@@ -53,10 +53,10 @@
       <h3 class="opacity">🇺🇦 front end developer based in Sweden 🇸🇪</h3>
       <section class="buttons-container">
         <div class="button button-text">
-          <a href="about.html">About me</a>
+          <a href="/about.html">About me</a>
         </div>
         <div class="button button-text">
-          <a href="about.html#contactme">Contact me</a>
+          <a href="/about.html#contactme">Contact me</a>
         </div>
       </section>
 
@@ -65,7 +65,7 @@
           <div class="col-sm-5 project-block radiused">
             <img
               class="portfolio-index-image radiused"
-              src="images/yoga.png"
+              src="/images/yoga.png"
               alt="yoga project"
             />
           </div>
@@ -94,7 +94,7 @@
           <div class="col-sm-5 project-block radiused">
             <img
               class="portfolio-index-image radiused"
-              src="images/weather.png"
+              src="/images/weather.png"
               alt="weather project"
             />
           </div>
@@ -103,7 +103,7 @@
           <div class="col-sm-5 project-block radiused">
             <img
               class="portfolio-index-image radiused"
-              src="images/yogurt.png"
+              src="/images/yogurt.png"
               alt="yogurt project"
             />
           </div>
