--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <!-- style css -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <div class="container">
@@ -137,6 +137,6 @@
       crossorigin="anonymous"
     ></script>
     <!-- js -->
-    <script href="site.js"></script>
+    <script href="/site.js"></script>
   </body>
 </html>
